--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.firebase:firebase-analytics'
 
-
     implementation 'com.journeyapps:zxing-android-embedded:4.2.0'
+    implementation 'com.nambimobile.widgets:expandable-fab:1.0.2'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
