--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 
     implementation 'com.journeyapps:zxing-android-embedded:4.2.0'
     implementation 'com.nambimobile.widgets:expandable-fab:1.0.2'
+    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
